more spacing fixes a problem! yay!

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -210,7 +210,6 @@ div#content {
 }
 
 div.nav {
-  margin-top: -4em;
 }
 
 #feedback {
